# beaconcrypt

./: .gitignore  Cargo.toml  LICENSE  README.md  beaconcrypt.go  beaconcrypt.pyi  beaconcrypt_test.go  bindings.h  build.rs  go.mod  pyproject.toml  rustfmt.toml
.github/workflows/: codeql.yml  go.yml  python.yml  release.yml  rust.yml
doc/: multi-opening-fixture.md  protocol.md  rationale.md  threat_model.md
examples/c/: CMakeLists.txt  README.md  main.c
examples/go/: README.md  go.mod  go.sum  main.go
examples/python/: README.md  main.py  pyproject.toml
examples/rust/: README.md  main.rs
scripts/: derive_multi_opening.py  generate_kat_vectors.go  generate_kat_vectors.py  generate_python_stubs.py
src/: beacon.rs  cbinds.rs  cnsa2.rs  error.rs  gobinds.rs  lib.rs  pqxdh.rs  pybinds.rs  server.rs  shared.rs
src/schema/: cryptoframe.capnp  phase1.capnp  phase2.capnp  protogram.capnp
tests/: beacon.rs  protocol.rs  server.rs  test_encryption.py  test_registration.py
