[package]
name = "beaconcrypt"
version = "0.3.5"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
description = "Cryptographic transport for C2 channels"
rust-version = "1.96"
repository = "https://github.com/0xd6cb6d73/beaconcrypt"

[lib]
name = "beaconcrypt"
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
capnpc = "0.26"
cbindgen = "0.29"

[dependencies]
capnp = "0.26"
libsodium-rs = "0.2"
zeroize = "1.9"
libcrux-ml-dsa = { version = "0.0.9", optional = true }
libcrux-ml-kem = { version = "0.0.9", optional = true }
libcrux-aesgcm = { version = "0.0.8", optional = true }
pyo3 = { version = "0.29.0", features = ["abi3-py311", "experimental-inspect"], optional = true }

[features]
default = ["beacon", "server", "pqxdh"]
server = []
beacon = []
cnsa2 = ["dep:libcrux-ml-dsa", "dep:libcrux-ml-kem", "dep:libcrux-aesgcm"]
pqxdh = []
pybinds = ["dep:pyo3"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.maturin]
name = "beaconcrypt"
bindings = "pyo3"
