[package]
name = "beaconcrypt"
version = "0.3.12"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
description = "Cryptographic transport for C2 channels"
rust-version = "1.96"
repository = "https://github.com/0xd6cb6d73/beaconcrypt"

[lib]
name = "beaconcrypt"
crate-type = ["cdylib", "staticlib", "rlib"]

[[example]]
name = "rust"
path = "examples/rust/main.rs"
required-features = ["pqxdh", "beacon", "server"]

[[test]]
name = "beacon"
path = "tests/beacon.rs"
required-features = ["pqxdh", "beacon", "server"]

[[test]]
name = "protocol"
path = "tests/protocol.rs"
required-features = ["pqxdh", "beacon", "server"]

[[test]]
name = "server"
path = "tests/server.rs"
required-features = ["pqxdh", "beacon", "server"]

[build-dependencies]
capnpc = "0.26"
cbindgen = "0.29"

[dependencies]
capnp = "0.26"
libsodium-rs = "0.2"
zeroize = "1.9"
pyo3 = { version = "0.29.0", features = ["abi3-py311", "experimental-inspect"], optional = true }

[features]
default = ["beacon", "server", "pqxdh"]
server = ["pqxdh"]
beacon = ["pqxdh"]
pqxdh = []
gobinds = ["cbinds"]
cbinds = ["beacon", "server", "pqxdh"]
pybinds = ["dep:pyo3", "beacon", "server", "pqxdh"]
all = ["gobinds", "pybinds", "cbinds"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.maturin]
name = "beaconcrypt"
bindings = "pyo3"
