[build-system]
requires = ["maturin>=1.14,<2.0" ,"pip"]
build-backend = "maturin"

[project]
name = "beaconcrypt"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "maturin>=1.14,<2.0"
]

[tool.cibuildwheel]
# Use uv and build
build-frontend = "build[uv]"

[tool.cibuildwheel.linux]
before-all = "apt install -y capnproto"

[tool.cibuildwheel.windows]
before-all = "choco install capnproto -y"

[tool.cibuildwheel.config-settings]
build-args = "--features pybinds"
